	  'info'.
	- Replaced 'cache_stoplist' with 'no_cache' Access list.
	- Fixed (hopefully) remaining swapfile-open-at-exit bugs.
	- Fixed default hierarchy_stoplist to be ``default if none.''
	- Fixed 'fake a recent reply' hack for detecting DEAD
	  and ALIVE neighbors (Joe Ramey).
	- Fixed FTP directory parsing bugs.
	- Fixed daylight savings time bug (again).

Changes to squid-1.2.beta19 (Apr 8, 1998):

	- Squid-1.2.beta19 compiles and runs on Windows/NT with
	  Cygnus Gnu-WIN32 b19 (Henrik Nordstrom).
	- Added French Error pages by Frank DENIS.
	- Added Dutch Error pages by Mark Visser
	- Added German Error pages by Mark Visser
	- Added support for only-if-cached cache-control directive.
	- Added RELAXED_HTTP_PARSER #define to allow requests which are
	  missing the HTTP identifier on the request line (e.g. buggy
	  SpyGame queries).  RELAXED_HTTP_PARSER is undefined by default.
	- Fixed disk.c FD leak for delayed closes in
	  diskHandleWriteComplete().
	- Fixed cache announcement feature.
	- Fixed httpReadReply() to retry failed HTTP requests on
	  persistent connections when read() returns -1, not only
	  when it returns 0.
	- Fixed cbdata memory counting leak.  cbdataUnlock() always
	  called free(), never memFree().
	- Fixed storeDirWriteCleanLogs() malloc bug on Alphas.
	- Fixed `++loopdetect < 10' assertion due to
	  clientHandleIMSReply bug for invalid/partial HTTP
	  replies.
	- Added preliminary code for HTCP.
	- Renamed 'aux' dir to 'cfgaux' for legacy DOS machines.
	- Added "snmp_community" as an ACL type.
	- Cleaned up proxy-auth acl implementation and removed
	  memory leaks.
	- Added generic 'hashFreeItems()' function for efficiently
	  freeing hash table pointers.
	- Added whoisTimeout() for ASN code.
	- Removed BINARY TREE code.
	- Fixed forgetting to reset Config.Swap.maxSize in
	  configDoConfigure.
	- Fixed httpReplyUpdateOnNotModified() arguments-in-wrong-order
	  bug which caused not modified replies to not get updated.