@@ -161,7 +161,7 @@ cacheDigestAdd(CacheDigest * cd, const cache_key * key)
 	    CBIT_SET(cd->mask, hashed_keys[3]);
 	    on_xition_cnt++;
 	}
-#if SQUID_PEER_DIGEST
+#if USE_CACHE_DIGESTS
 	statHistCount(&Counter.cd.on_xition_count, on_xition_cnt);
 #endif
     }
