@@ -264,7 +264,7 @@ typedef enum {
     NO_DIRECT_FAIL,
     SOURCE_FASTEST,
     ROUNDROBIN_PARENT,
-#if SQUID_PEER_DIGEST
+#if USE_CACHE_DIGESTS
     CACHE_DIGEST_HIT,
     NO_CACHE_DIGEST_DIRECT,
 #endif
